[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "pkstruct"
version = "0.1.0"
description = "Industrial-grade data structures and algorithms toolkit for Python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "pkstruct Contributors" }]
requires-python = ">=3.10"
keywords = ["data-structures", "algorithms", "linked-list", "dsa", "collections"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "pytest-benchmark>=4.0",
    "mypy>=1.7",
    "ruff>=0.1.6",
    "black>=23.11",
    "twine>=4.0",
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/pkstruct/pkstruct"
Repository = "https://github.com/pkstruct/pkstruct"
Documentation = "https://pkstruct.readthedocs.io"
"Bug Tracker" = "https://github.com/pkstruct/pkstruct/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pkstruct"]
exclude = ["**/tests/**", "**/test_*.py", "**/test_*.pyi"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["src/pkstruct/linear/tests", "src/pkstruct/trees/tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"