[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "pkstruct"
version = "0.1.1"
description = "A production-grade, open-source Python library providing comprehensive data structures and algorithms with type hints, thread safety, and extensive testing"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Prannavakhanth", email = "prannavakhanth12@gmail.com" },
    { name = "Priyanka Kaliraj", email = "pri2303k@gmail.com" },
    { name = "pkstruct Contributors" },
]
requires-python = ">=3.10"
keywords = [
    "data-structures", "algorithms", "dsa",
    "linked-list", "stack", "queue", "deque",
    "tree", "binary-search-tree", "avl-tree", "red-black-tree",
    "b-tree", "bplus-tree", "segment-tree", "fenwick-tree", "interval-tree",
    "graph", "graph-algorithms",
    "competitive-programming", "interview",
    "collections",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "pytest-benchmark>=4.0",
    "mypy>=1.7",
    "ruff>=0.1.6",
    "black>=23.11",
    "twine>=4.0",
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/prnvvv/pkstruct"
Repository = "https://github.com/prnvvv/pkstruct"
Documentation = "https://github.com/prnvvv/pkstruct#readme"
"Bug Tracker" = "https://github.com/prnvvv/pkstruct/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pkstruct"]
exclude = ["**/tests/**", "**/test_*.py", "**/test_*.pyi"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
disable_error_code = [
    "no-untyped-def",
    "union-attr",
    "unused-ignore",
    "no-any-return",
    "override",
    "type-arg",
]
exclude = [
    "src/pkstruct/.*/tests/",
]

[[tool.mypy.overrides]]
module = [
    "pkstruct.trees.red_black",
    "pkstruct.trees.avl",
    "pkstruct.trees.bst",
    "pkstruct.trees.btree",
    "pkstruct.trees.bplus",
]
disable_error_code = ["arg-type", "assignment", "return-value", "attr-defined", "operator", "var-annotated", "list-item"]

[[tool.mypy.overrides]]
module = [
    "pkstruct._tree_shortcuts",
    "pkstruct.trees.visualization.tree_printer",
    "pkstruct.linear.visualization.linked_list_visualizer",
    "pkstruct.linear.utils.iterators",
    "pkstruct.linear.utils.helpers",
    "pkstruct.linear.utils.debug_tools",
    "pkstruct.linear.utils.benchmark",
    "pkstruct.linear.stacks.array_stack",
]
disable_error_code = ["attr-defined", "var-annotated", "operator", "assignment", "list-item", "call-overload", "abstract"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["src/pkstruct/linear/tests", "src/pkstruct/trees/tests", "src/pkstruct/graphs/tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"